--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,20 +6,7 @@
     "lib": ["ES2020"],
     "sourceMap": true,
     "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "types": ["node"]
+    "strict": true
   },
-  "exclude": [
-    "node_modules",
-    ".vscode-test",
-    "out"
-  ],
-  "include": [
-    "src/**/*"
-  ]
+  "exclude": ["node_modules", ".vscode-test"]
 }
